--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     
     <div class="child2">
-        <img src="assets/css/images/cusine.jpg" alt="">
+        <img src="assets/css/images/front.jfif" alt="">
        
 
     </div>
